# marina

./: .gitignore  CONTEXT.md  Cargo.toml  DESIGN.md  README.md  deny.toml  flake.nix  rust-toolchain.toml
.claude/skills/grill-with-docs/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
demo/: demo.tape  record.sh  scene-down.sh  scene-up.sh
docs/adr/: 0001-target-as-the-unit.md  0002-anchor-and-subtree-boundary.md  0003-cli-agent-surface.md
skills/marina/: SKILL.md
src/: cli.rs  config.rs  docker.rs  logs.rs  main.rs  model.rs  msg.rs  sampler.rs
src/resolve/: mod.rs
src/sources/: mod.rs
src/ui/: mod.rs
src/verbs/: mod.rs
