[package]
# crates.io package id (the name `marina` is taken); the binary stays `marina`.
name = "marina-tui"
version = "0.1.0"
edition = "2021"
description = "A developer-process cockpit — the dev servers and processes you care about, resolved into names you recognize"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/danfry1/marina"
homepage = "https://github.com/danfry1/marina"
keywords = ["tui", "cli", "ports", "devtools", "process"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/demo", "/.github", "/docs"]

# The installed binary is `marina` regardless of the package id.
[[bin]]
name = "marina"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"          # rendering (diff buffer) + re-exports crossterm
sysinfo = "0.39"          # process cpu/mem/cwd/argv/parent (+ cpu delta math)
netstat2 = "0.11"         # listening socket -> pid
serde = { version = "1", features = ["derive"] } # config structs
serde_json = "1"          # parse package.json name
toml = "1.1"              # parse config + Cargo.toml / pyproject.toml name
regex = "1"               # config rule matching

# macOS-only: accurate phys_footprint memory. On Linux marina falls back to RSS.
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
